- Adjust render lighting angle to reduce effects of themes with over-saturated light
- Wait until confirmation level is fully loaded before generating thumbnails
- Cache thumbnails directly in BuildingData record
- Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
- Lower z-order of notification panels (to put them behind everything else)


Version 2.0.3

- Ensure Dummy AI initialises with beautification service
- Catch NullReferenceException on building button tooltip creation if another mod is interfering with AI
- Increase InitPrefab patch priority


Version 2.0.2

- Delete building button when local settings are removed and no other settings remain
- Fix building button not being deleted when a UI category change is saved and then applied
- Reset camera flags before rendering preview thumbnails
- Fix transposition of 'tourism' and 'leisure' items in some settings menus
- Add explicit Harmony Prefix prioritisation over Prefab Hook


Version 2.0.1

-  Tweak Harmony 2.0 installing and patching.


Version 2.0

- Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
- Implement growables
- Add experimental live updating of RICO building settings
- Add button to access RICO settings directly from building info panels
- Update residential building household counts on load
- Standardise building display names and avoid non-unique names for prefabs
- Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
- Change settings panel filter toggle button behaviour to match common standards
- Generate standardised building preview images for thumbnail sprites
- Building preview (thumbnails and settings panel) overlays include name, level and size
- Replace default game tooltips with smaller ones with only relevant info