@@ -5,6 +5,8 @@
 - Wait until confirmation level is fully loaded before generating thumbnails
 - Cache thumbnails directly in BuildingData record
 - Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
+- Only force building household count updates when actual counts differ from specified
+- Use EnableCitizenUnits reverse redirect to reallocate household counts where actual counts are lower than specified
 - Lower z-order of notification panels (to put them behind everything else)
 
 
